Desafio Aplicando Bootstrap

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="./images/hoilogo.png" alt="" width="130" height="40">
                     </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fa-solid fa-bars"></i>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -52,21 +52,21 @@
               <div class="carousel-item active">
                 <img src="./images/pexels-scott-webb-213727.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>House of Irupe</h5>
+                  <h4>House of Irupe</h4>
                   <p>Diseñamos espacios Saludables</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./images/pexels-mikhail-nilov-6740754.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Yoga</h5>
+                  <h4>Yoga</h4>
                   <p>Como es adentro es afuera</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./images/pexels-content-pixie-2736497.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Feng Shui</h5>
+                  <h4>Feng Shui</h4>
                   <p>Convierte tu casa en tu hogar</p>
                 </div>
               </div>
@@ -80,8 +80,8 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <div class="card">
-            <div class="card-body">
+          <div class="card" id="card-home">
+            <div class="card-body" id="textohome">
               Los espacios que habitamos son una extensión de nuestra esencia y un reflejo de nuestro mundo interior.
               Nuestro hogar es una herramienta de autoconocimiento y tambien permite a las demás personas que lleguen a conocer más de nosotros. 
               La decoración de nuestro espacio expresa la identidad de uno mismo, e infiere en nuestra vida de forma directa. Te invito a conocer mas...  
