--- a/pages/hola.html
+++ b/pages/hola.html
@@ -17,7 +17,7 @@
                     <img src="../images/hoilogo.png" alt="" width="130" height="40">
                     </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fa-solid fa-bars"></i>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -44,17 +44,17 @@
     <section>
         <div class="card d-none d-md-block bg-dark text-white" id="portadahola"> 
             <img src="../images/pexels-content-pixie-2736497.jpg" class ="card-img " alt="...">
-            <div class="card-img-overlay">
+            <div class="card-img-overlay" id="titulohola">
               <p class="card-text">Diseño espacios saludables</p>
             </div>
           </div>
         <div class="card" id="cardhola">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../images/1pexels-elina-fairytale-3822630.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="../images/1pexels-elina-fairytale-3822630.jpg" class="img-fluid rounded" alt="...">
               </div>
               <div class="col-md-8">
-                <div class="card-body">
+                <div class="card-body" id="textohola">
                   <h5 class="card-title">Hola!</h5>
                   <p class="card-text">Soy Denise,
                     Me forme como diseñadora e instructora de Yoga y también estudié Ayurveda y Feng Shui.
