--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,48 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOI</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
+    <link rel="stylesheet" href="../css/stylenuevo.css">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
 </head>
-<body id="main">
+<body>
     <header>
-        <nav>
-            <a href="#" class="logo">
-                <img src="../images/hoilogo.png" alt="logo">
-            </a>
-            <label for="burguer" class="boton">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="../images/hoilogo.png" alt="" width="130" height="40">
+                    </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
-            </label>
-            <input type="checkbox" id="burguer">
-            <ul class="menuburguer">
-                <li class="titulosmenu"><a href="../index.html">Home</a></li>
-                <li class="titulosmenu"><a href="./hola.html">Hola!</a></li>
-                <li class="titulosmenu"><a href="./yoga.html">Yoga</a></li>
-                <li class="titulosmenu"><a href="./feng.html">Feng Shui</a></li>
-            </ul>
-        </nav>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Home</a>
+                      </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/hola.html">Hola</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/yoga.html">Yoga</a>
+                      </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="../pages/feng.html">Feng</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" style= color:cadetblue aria-current="page" href="#">Contacto</a>
+                    </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
-    <section>
+    <section id="contacto-card">
         <div class="portadacontacto">
-            <form action="#" method="GET" enctype="multipart/form-data">
-                <fieldset class="contacto">
-                    <legend>Contacto:</legend>
-                    <div><label for="nombre">Nombre:</label>
-                        <input name="nombre" type="text" placeholder="Nombre"></div>
-                    <div><label for="mail">Mail:</label>
-                        <input name="mail" type="text" placeholder="Mail"></div>
-                    <div><label for="comentarios">Comentarios:</label>
-                        <input name="comentarios" type="text" placeholder="Escribir aqui"></div>
-                    <div><input name="enviar" type="submit" value="Enviar"></div>
-                </fieldset>
-            </form>
+            <form class="contacto">
+                <legend>Contacto:</legend>
+                <div class="mb-3">
+                    <label for="exampleInputName" class="form-label">Nombre</label>
+                    <input type="nombre" class="form-control" id="exampleInputName" aria-describedby="name">
+                  </div>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Mail</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  </div>
+                <button type="enviar" class="btn btn-primary">Enviar</button>
+              </form>
     </section>
     <footer>
-        <ul class="redes">
-            <li><img src="../images/wtsp.png" alt="wtsp"></li>
-            <li><img src="../images/in.png" alt="in"></li>
-            <li><img src="../images/gmail.png" alt="gmail"></li>
-        </ul>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link" href="#"><img src="../images/wtsp.png" width="25" height="25"></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><img src="../images/in.png" width="25" height="25"></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><img src="../images/gmail.png" width="25" height="25"></a>
+              </li>
+          </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
