--- a/pages/yoga.html
+++ b/pages/yoga.html
@@ -5,84 +5,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOI</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css>
+    <link rel="stylesheet" href="../css/stylenuevo.css">
     <script src="https://kit.fontawesome.com/82f5c4b4c3.js" crossorigin="anonymous"></script>
 </head>
-<body id="main">
+<body>
     <header>
-        <nav>
-            <a href="#" class="logo">
-                <img src="../images/hoilogo.png" alt="logo">
-            </a>
-            <label for="burguer" class="boton">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="../images/hoilogo.png" alt="" width="130" height="40">
+                    </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
-            </label>
-            <input type="checkbox" id="burguer">
-            <ul class="menuburguer">
-                <li class="titulosmenu"><a href="../index.html">Home</a></li>
-                <li class="titulosmenu"><a href="./hola.html">Hola!</a></li>
-                <li class="titulosmenu"><a href="./feng.html">Feng</a></li>
-                <li class="titulosmenu"><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Home</a>
+                      </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/hola.html">Hola</a>
+                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" style= color:cadetblue aria-current="page" href="#">Yoga</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/feng.html">Feng</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <section>
-        <div class="portadayoga">
-            <h2 class="tituloyoga">"Como es adentro es afuera"</h2>
-        </div>
-        <div id="sectionyoga1">
-            <div class="texto1">
-                <p>El Ayurveda (“Ayu” significa vida y “Veda” es conocimiento) es una ciencia que elabora diferentes modelos o modos de vida que están íntimamente relacionados con el bienestar físico, social y mental del individuo.
-                Este conduce a los caminos del yoga, a entender la naturaleza del cuerpo, qué tipo de alimentos y qué estilos de vida son más apropiados.</p>
-            </div>
-            <div>
-                <img class="asana1" src="../images/pexels-elina-fairytale-3822457.jpg" alt="about2">
-            </div>
-            <div>
-                <img class="asana2" src="../images/pexels-elina-fairytale-3822582.jpg" alt="about2">
-            </div>
-            <div class="texto2">
-                <p>Este estilo de vida lleva a una comprensión holística del yoga: un cuerpo sano, así como una mente libre de distorsiones y desequilibrio.
-                    Yoga y Ayurveda son inseparables. Ambas ciencias constan de ocho ramas, tanto el Ashtanga yoga como el Ashtanga Ayurveda. Las dos coinciden en que la salud del cuerpo depende de la salud y el equilibrio de la mente.</p>
-            </div>
-            <div class="texto3">
-                <p>De acuerdo con el Ayurveda, el cuerpo se sostiene sobre un trípode de elementos: Vata, Pitta y Kapha. Cuando no se encuentran en sintonía, estos dañan al cuerpo.
-                    Para alcanzar el balance adecuado, es necesario prestarles atención al tipo de comida que ingerís, el horario en que lo hacés, la rutina y el estilo de vida.</p>
-            </div>
-            <div>
-                <img class="asana3" src="../images/meditacion3.jpg" alt="about2">
+        <div class="row card bg-dark text-white" id="portadayoga"> 
+            <img src="../images/pexels-mikhail-nilov-6740754.jpg" class ="card-img " alt="...">
+            <div class="card-img-overlay" id="tituloyoga">
+              <p class="card-text">"Como es adentro es afuera"</p>
             </div>
         </div>
-        <div id="sectionyoga2">
-            <div class="texto1">
-                <p>El Ayurveda (“Ayu” significa vida y “Veda” es conocimiento) es una ciencia que elabora diferentes modelos o modos de vida que están íntimamente relacionados con el bienestar físico, social y mental del individuo.
-                Este conduce a los caminos del yoga, a entender la naturaleza del cuerpo, qué tipo de alimentos y qué estilos de vida son más apropiados.</p>
+        <div class="row row-cols-1 row-cols-md-3" id="sectionyoga">
+            <div class="col">
+                <div class="card" id="card-yoga1">
+                    <div class="card-body">
+                      <p class="card-text">El Ayurveda (“Ayu” significa vida y “Veda” es conocimiento) es una ciencia que elabora diferentes modelos o modos de vida que están íntimamente relacionados con el bienestar físico, social y mental del individuo.
+                        Este conduce a los caminos del yoga, a entender la naturaleza del cuerpo, qué tipo de alimentos y qué estilos de vida son más apropiados.</p>
+                    </div>
+                    <img src="../images/pexels-elina-fairytale-3822457.jpg" class="asanas" alt="...">
+                </div>
             </div>
-            <div class="texto2">
-                <p>Este estilo de vida lleva a una comprensión holística del yoga: un cuerpo sano, así como una mente libre de distorsiones y desequilibrio.
-                    Yoga y Ayurveda son inseparables. Ambas ciencias constan de ocho ramas, tanto el Ashtanga yoga como el Ashtanga Ayurveda. Las dos coinciden en que la salud del cuerpo depende de la salud y el equilibrio de la mente.</p>
+            <div class="col">
+                <div class="card" id="card-yoga2">
+                    <div class="card-body">
+                      <p class="card-text">Este estilo de vida lleva a una comprensión holística del yoga: un cuerpo sano, así como una mente libre de distorsiones y desequilibrio.
+                        Yoga y Ayurveda son inseparables. Ambas ciencias constan de ocho ramas, tanto el Ashtanga yoga como el Ashtanga Ayurveda. Las dos coinciden en que la salud del cuerpo depende de la salud y el equilibrio de la mente.</p>
+                    </div>
+                    <img src="../images/pexels-elina-fairytale-3822582.jpg" class="asanas" alt="...">
+                </div>
             </div>
-            <div class="texto3">
-                <p>De acuerdo con el Ayurveda, el cuerpo se sostiene sobre un trípode de elementos: Vata, Pitta y Kapha. Cuando no se encuentran en sintonía, estos dañan al cuerpo.
-                    Para alcanzar el balance adecuado, es necesario prestarles atención al tipo de comida que ingerís, el horario en que lo hacés, la rutina y el estilo de vida.</p>
-            </div>
-            <div>
-                <img class="asana1" src="../images/pexels-elina-fairytale-3822457.jpg" alt="about2">
-            </div>
-            <div>
-                <img class="asana2" src="../images/pexels-elina-fairytale-3822582.jpg" alt="about2">
-            </div>
-            <div>
-                <img class="asana3" src="../images/meditacion3.jpg" alt="about2">
-            </div>
-        </div>       
+            <div class="col">
+                <div class="card" id="card-yoga3">
+                    <div class="card-body">
+                      <p class="card-text">De acuerdo con el Ayurveda, el cuerpo se sostiene sobre un trípode de elementos: Vata, Pitta y Kapha. Cuando no se encuentran en sintonía, estos dañan al cuerpo. Por esto para alcanzar el balance adecuado, es necesario prestarles atención al tipo de comida que ingerís, el horario en que lo hacés, la actividad fisica, la rutina y el estilo de vida.</p>
+                    </div>
+                    <img src="../images/meditacion3.jpg" class="asanas" alt="...">
+                </div>
+            </div>      
+        </div>
     </section>
     <footer>
-        <ul class="redes">
-            <li><img src="../images/wtsp.png" alt="wtsp"></li>
-            <li><img src="../images/in.png" alt="in"></li>
-            <li><img src="../images/gmail.png" alt="gmail"></li>
-        </ul>
-</footer>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link" href="#"><img src="../images/wtsp.png" width="25" height="25"></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><img src="../images/in.png" width="25" height="25"></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><img src="../images/gmail.png" width="25" height="25"></a>
+              </li>
+          </ul>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
