SEGUNDA ENTREGA HOI

--- a/index.html
+++ b/index.html
@@ -87,6 +87,26 @@
               La decoración de nuestro espacio expresa la identidad de uno mismo, e infiere en nuestra vida de forma directa. Te invito a conocer mas...  
             </div>
           </div>
+          <div class="row" id="homeextra">
+            <div class="col-sm-6">
+              <div class="card" id="card-links">
+                <div class="card-body">
+                  <h5 class="card-title">YOGA</h5>
+                  <p class="card-text">Te gustaría personalizar tu práctica de Yoga?</p>
+                  <a href="#" class="btn btn-primary">Si!</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card" id="card-links2">
+                <div class="card-body">
+                  <h5 class="card-title">FENG SHUI</h5>
+                  <p class="card-text">Te gustaría asesorarte en feng shui?</p>
+                  <a href="#" class="btn btn-primary">Si!</a>
+                </div>
+              </div>
+            </div>
+          </div>
     </section>
     <footer>
         <ul class="nav justify-content-center">
