--- a/pages/feng.html
+++ b/pages/feng.html
@@ -44,10 +44,10 @@
     <section>
         <div class="card d-none d-md-block bg-dark text-white" id="portadahola"> 
             <img src="../images/portada2.jpg" class ="card-img " alt="...">
-            <div class="card-img-overlay" id="titulofeng">
-              <p class="card-text">Convierte tu casa en tu hogar</p>
-            </div>
-          </div>
+        </div>
+        <div class="row">
+          <p class="titulo-yogasection">Convierte tu casa en tu hogar ...</p>
+        </div>
         <div class="card" id="cardfeng">
             <div class="row g-0">
               <div class="col-md-4">
@@ -57,7 +57,13 @@
                 <div class="card-body" id="elementos">
                   <h5 class="card-title">El chi</h5>
                   <p class="card-text">La energía Chi es pura cuando primero entra en la tierra, pero rápidamente pasa por varias transformaciones cuando se manifiesta en lo físico. Esta manifestación crea cinco expresiones de la energía chi que conocemos como elementos del feng shui. Estos cinco elementos deben interactuar para recrear la perfección de la energía chi en lo físico.</p>
-                  <p class="card-text"><small class="text-muted">Querés saber mas?</small></p>
+                  <div class="animacionyoga">
+                    <img class="pelotita" src="../images/Recurso 1.png">
+                    <img class="pelotita" src="../images/Recurso 2.png">
+                    <img class="pelotita" src="../images/Recurso 3.png">
+                    <img class="pelotita" src="../images/Recurso 4.png">
+                    <img class="pelotita" src="../images/Recurso 5.png">
+                   </div>
                 </div>
               </div>
             </div>
@@ -68,7 +74,6 @@
                 <div class="card-body" id="elementos">
                   <h5 class="card-title">Feng Shui</h5>
                   <p class="card-text">El Feng Shui es una filosofía que se basa en encontrar el equilibrio y aportar energías positivas a los lugares que habitamos. Su traducción, 'Viento y Agua', hace referencia al movimiento del Chi o flujo vital de energía, que forma parte de todo y todos y cuya circulación propicia salud, prosperidad y una vida armoniosa. Ya sabes: si cuidas de tu casa, tu casa cuidará de ti. Buscar un lugar óptimo para vivir: este ha sido el objetivo del Feng Shui desde sus inicios. La clave es crear un ambiente positivo y armonioso que mejore la vida de sus ocupantes.</p>
-                  <p class="card-text"><small class="text-muted">Querés saber mas?</small></p>
                 </div>
               </div>
               <div class="col-md-4">
@@ -85,7 +90,8 @@
                 <div class="card-body" id="elementos">
                   <h5 class="card-title">El mapa no es el territorio</h5>
                   <p class="card-text">El mapa de feng shui bagua es un mapa de forma octogonal que le permite evaluar en términos de feng shui cualquier espacio de vida o de trabajo. El feng shui bagua es una herramienta de feng shui muy importante e indispensable cuando deseamos armonizar un lugar y los elementos en él.</p>
-                  <p class="card-text"><small class="text-muted">Querés saber mas?</small></p>
+                  <p class="card-text"><small class="text-muted">Querés hacer el bagua de tu casa?</small></p>
+                  <a class="btn btn-primary" href="../pages/contacto.html" role="button">Quiero!</a>
                 </div>
               </div>
             </div>
