--- a/pages/yoga.html
+++ b/pages/yoga.html
@@ -44,16 +44,28 @@
     <section>
         <div class="row card bg-dark text-white" id="portadayoga"> 
             <img src="../images/pexels-mikhail-nilov-6740754.jpg" class ="card-img " alt="...">
-            <div class="card-img-overlay" id="tituloyoga">
-              <p class="card-text">"Como es adentro es afuera"</p>
+            <div class="card-img-overlay">
+              <p class="card-text" id="tituloyoga">"Como es adentro es afuera"</p>
             </div>
+        </div>
+        <div class="row">
+          <p class="titulo-yogasection">YOGA Y AYURVEDA</p>
+        </div>
+        <div class="row">
+          <div class="animacionyoga">
+            <img class="pelotitas" src="../images/Recurso 1.png">
+            <img class="pelotitas" src="../images/Recurso 2.png">
+            <img class="pelotitas" src="../images/Recurso 3.png">
+            <img class="pelotitas" src="../images/Recurso 4.png">
+            <img class="pelotitas" src="../images/Recurso 5.png">
+           </div>
         </div>
         <div class="row row-cols-1 row-cols-md-3" id="sectionyoga">
             <div class="col">
                 <div class="card" id="card-yoga1">
                     <div class="card-body">
-                      <p class="card-text">El Ayurveda (“Ayu” significa vida y “Veda” es conocimiento) es una ciencia que elabora diferentes modelos o modos de vida que están íntimamente relacionados con el bienestar físico, social y mental del individuo.
-                        Este conduce a los caminos del yoga, a entender la naturaleza del cuerpo, qué tipo de alimentos y qué estilos de vida son más apropiados.</p>
+                      <p class="card-text">El Ayurveda (“Ayu”= vida y “Veda”= conocimiento) es una ciencia que elabora diferentes modelos relacionados con el bienestar físico, social y mental del individuo.
+                        Este conduce a los caminos del yoga, a entender la naturaleza del cuerpo, qué tipo de alimentos y qué estilos de vida son más apropiados para cada persona.</p>
                     </div>
                     <img src="../images/pexels-elina-fairytale-3822457.jpg" class="asanas" alt="...">
                 </div>
@@ -62,7 +74,7 @@
                 <div class="card" id="card-yoga2">
                     <div class="card-body">
                       <p class="card-text">Este estilo de vida lleva a una comprensión holística del yoga: un cuerpo sano, así como una mente libre de distorsiones y desequilibrio.
-                        Yoga y Ayurveda son inseparables. Ambas ciencias constan de ocho ramas, tanto el Ashtanga yoga como el Ashtanga Ayurveda. Las dos coinciden en que la salud del cuerpo depende de la salud y el equilibrio de la mente.</p>
+                        Yoga y Ayurveda constan de ocho ramas (Ashtanga) Y ambas coinciden en que la salud del cuerpo depende de la salud y el equilibrio de la mente. «Yoga es el reposo de las fluctuaciones mentales »</p>
                     </div>
                     <img src="../images/pexels-elina-fairytale-3822582.jpg" class="asanas" alt="...">
                 </div>
@@ -70,7 +82,7 @@
             <div class="col">
                 <div class="card" id="card-yoga3">
                     <div class="card-body">
-                      <p class="card-text">De acuerdo con el Ayurveda, el cuerpo se sostiene sobre un trípode de elementos: Vata, Pitta y Kapha. Cuando no se encuentran en sintonía, estos dañan al cuerpo. Por esto para alcanzar el balance adecuado, es necesario prestarles atención al tipo de comida que ingerís, el horario en que lo hacés, la actividad fisica, la rutina y el estilo de vida.</p>
+                      <p class="card-text">De acuerdo con el Ayurveda, exiten 5 elementos en el universo y el cuerpo se sostiene sobre un trípode de estos elementos: Vata, Pitta y Kapha. El ayurveda se basa en la observación de estos elementos en la vida de un individuo con el objetivo de equilibrarlos obteniendo asi una vida mas saludable.</p>
                     </div>
                     <img src="../images/meditacion3.jpg" class="asanas" alt="...">
                 </div>
