--- a/pages/hola.html
+++ b/pages/hola.html
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="card-group">
-            <div class="card col-sm-12">
+            <div class="card col-sm-12" id="diseño">
               <div class="card-body">
                 <h5 class="card-title">Diseño</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
