--- a/pages/hola.html
+++ b/pages/hola.html
@@ -44,10 +44,10 @@
     <section>
         <div class="card d-none d-md-block bg-dark text-white" id="portadahola"> 
             <img src="../images/pexels-content-pixie-2736497.jpg" class ="card-img " alt="...">
-            <div class="card-img-overlay" id="titulohola">
-              <p class="card-text">Diseño espacios saludables</p>
-            </div>
           </div>
+        <div>
+            <p id="titulohola">DISEÑO ESPACIOS SALUDABLES</p>
+        </div>
         <div class="card" id="cardhola">
             <div class="row g-0">
               <div class="col-md-4">
